tests/negative/gold/abstract5_test.gold
tests/negative/abstract5_test.toit:8:7: error: Non-abstract class 'B' is missing implementations
class B extends A:
      ^
tests/negative/abstract5_test.toit:6:12: note: Missing implementation for 'foo'
  abstract foo
           ^~~
Compilation failed.
